test/bad/classes/method05.px

class Test def
    func f(Int x) def
        skip

test = Test()
test.f = test.f
